@@ -1,5 +1,8 @@
 2009-12-31  Marco Bodrato <bodrato@mail.dm.unipi.it>
 
+	* mpn/generic/toom8_sqr.c (SQR_TOOM8_MAX): Avoid overflow.
+	* mpn/generic/toom6_sqr.c (SQR_TOOM6_MAX): Likewise.
+
 	* mpn/generic/mulmod_bnm1.c: Don't mention MISUSE any more,
 	simply consider UNLIKELY any unexpected size.
 
